# worldcup-probability-dashboard

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: update-data.yml
examples/: world_cup_sample.json
scripts/: backtest_model.py  fetch_sporttery.py  project_qualification.py  update_data.py
src/worldcup_arb/: __init__.py  cli.py  io.py  model.py  polymarket.py
tests/: test_backtest_model.py  test_fetch_sporttery.py  test_model.py  test_project_qualification.py
web/: app.js  index.html  styles.css
web/data/: matches.js
